# LegalScout

./: .gitignore  README.md  constants.py  fetch_evidence.py  pyproject.toml  requirements.txt
plugins/: csrc.py  shixin_csrc.py  sse_disclosure.py  szse_disclosure.py  utils.py
src/law_assistant/: constants.py  fetch_evidence.py
src/law_assistant/plugins/: csrc.py  shixin_csrc.py  sse_disclosure.py  szse_disclosure.py  utils.py
