[build-system]
requires = [ "poetry-core>=1.0.4",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "law_assistant"
version = "0.0.1"
description = "Python doraemon dev tool box"
authors = [ "Vincent Duan <vincent.duan95@outlook.com>",]
maintainers = [ "Vincent Duan <vincent.duan95@outlook.com>",]
repository = "https://github.com/Duan-JM/doraemon"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Topic :: Software Development :: Libraries",]
keywords = [ "tools"]
include = [ "LICENSE", "README.md"]
readme = "README.md"
license = "Apache-2.0"

[[tool.poetry.source]]
name = "aliyun for china users"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">3.9,<3.11"
selenium = "==4.12.0"
Pillow = ">0"
opencv-python = ">0"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.0"
pytest-xdist = "^3.2.1"
pytest = "^7.1.3"
ipdb = ">0"
openai = "^1.37"

[tool.poetry.dependencies.doraemon]
git = "https://github.com/Duan-JM/doraemon"
branch = "main"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
